# kOrganizify

./: .gitignore  README.md  doxy.cfg
Server/: CMakeLists.txt  server.cpp  server.h
Test/: CMakeLists.txt  basicEventTest.cpp  calendarTest.cpp  eventTest.cpp  main.cpp  schedulerTest.cpp  settingsTest.cpp  taskTest.cpp  toDoListTest.cpp
documentation/: classDiagram.yml  useCaseDiagram.drawio
documentation/doxygen/html/: annotated.html  appwindow_8cpp.html  appwindow_8cpp__incl.dot  appwindow_8h.html  appwindow_8h__dep__incl.dot  (+341 more)
documentation/specific documentation sections/: calendarDescription.md  calendarDiagram.drawio  eventDescription.md  eventDiagram.drawio  saveLoadDescription.md  saveLoadDiagram.drawio  settingsDescription.md  settingsDiagram.drawio  smartPlanDescription.md  smartPlanDiagram.drawio  synchronizationDescription.md  synchronizationDiagram.drawio  toDoListDescription.md  toDoListDesctiption.md  toDoListDiagram.drawio
kOrganizify/: .clang_format  CMakeLists.txt  CMakeLists.txt.orig  clangAnalyze.bat  clangAnalyze.sh  dockerfile  doxy.cfg  doxyConfig.cfg  log.txt  resources.qrc
kOrganizify/.qt/: QtDeploySupport.cmake
kOrganizify/src/: appwindow.cpp  appwindow.h  appwindow.ui  basicevent.cpp  basicevent.h  basiceventwindow.cpp  basiceventwindow.h  basiceventwindow.ui  calendar.cpp  calendar.h  client.cpp  client.h  event.cpp  event.h  eventwindow.cpp  eventwindow.h  eventwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notifications.cpp  notifications.h  notificationswindow.cpp  notificationswindow.h  notificationswindow.ui  proba.cpp  resources.qrc  responsewindow.cpp  responsewindow.h  responsewindow.ui  saveload.cpp  saveload.h  scheduler.cpp  scheduler.h  settings.cpp  settings.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  (+18 more)
kOrganizify/user_data/: a_data.json  andjela_data.json  andji_data.json  astefanovic_data.json  friends.json  jelisaveta_data.json  markic_data.json  marko_data.json  pdjordjevic_data.json  q_data.json  sara_data.json  smalkov_data.json  а_data.json
(+664 files in other folders)
